tests/baselines/reference/parserNotRegex1.errors.txt
tests/cases/conformance/parser/ecmascript5/parserNotRegex1.ts(1,7): error TS2304: Cannot find name 'a'.


==== tests/cases/conformance/parser/ecmascript5/parserNotRegex1.ts (1 errors) ====
      if (a.indexOf(-(4/3)))      // We should not get a regex here because of the / in the comment.
          ~
!!! error TS2304: Cannot find name 'a'.
      {
        return true;
      }